*********
Changelog
*********

Cogent 1.5.3-dev (changes since 1.5.3 go here)
==============================================

New Features
------------

Changes
-------

Bug Fixes
---------

Cogent 1.5.2 - 1.5.3
====================

New Features
------------

* Added a withoutLostSpans() method to Feature objects in
  cogent.core.annotation. Useful after projecting features from one aligned
  sequence across to another. Implemented for ordinary Features and
  SimpleVariables but not xxy_list Variables.

Changes
-------

* Make Span.remapWith() a little clearer in cogent.core.location.
* Tidy annotation remapping code in cogent.core.annotation and
  cogent.core.sequence so that new positions are only calculated once when
  slicing, projecting, or otherwise remapping parts of sequences. The old code
  was needlessly doing it twice.

Bug Fixes
---------

* Fixed bug in BLAT application controller (cogent.app.blat) which would drop
  some input sequences when running assign_dna_reads_to_protein_database.
* Prevent negative widths from arising in cogent.draw.compatibility when
  alignment is too wide.

Cogent 1.5.1 - 1.5.2
====================

New Features
------------

* Added new mantel_test function to cogent.maths.stats.test that allows the
  type of significance test to be specified. This function is meant to replace
  the pre-existing mantel function.
* Added new correlation_test function to cogent.maths.stats.test that computes
  the correlation (pearson or spearman) between two vectors, in addition to
  parametric and nonparametric tests of significance and confidence intervals.
  This function gives more control and information than the pre-existing
  correlation function. The spearman function is also a new addition.
* Added new mc_t_two_sample function to cogent.maths.stats.test that performs a
  two-sample t-test and uses Monte Carlo permutations to determine
  nonparametric significance (similar to R's Deducer::perm.t.test).